Added tests and expanded events