@@ -3,7 +3,6 @@ package dev.getelements.elements.stripe.event;
 import dev.getelements.elements.sdk.Event;
 import dev.getelements.elements.stripe.StripeEvents;
 
-import java.util.Arrays;
 import java.util.List;
 
 public record StripePaymentCanceledEvent(
@@ -17,7 +16,7 @@ public record StripePaymentCanceledEvent(
 
     @Override
     public List<Object> getEventArguments() {
-        return Arrays.asList(paymentIntentId, customerId);
+        return List.of(paymentIntentId);
     }
 
 }
